[gd_scene load_steps=6 format=3 uid="uid://d18m6tjj7ekjp"]

[ext_resource type="Script" uid="uid://bxe2idm88rwqi" path="res://scripts/branch_tree_hud.gd" id="1_tgpox"]
[ext_resource type="Script" uid="uid://6jugxpswyhyb" path="res://scripts/canvas_layer_branch_map.gd" id="2_43bds"]
[ext_resource type="Script" uid="uid://da3ou43wwqr87" path="res://scripts/node_player_state.gd" id="2_jh4iv"]
[ext_resource type="Texture2D" uid="uid://b1w6437q8gkh4" path="res://content/images/icon_peep.png" id="3_0lsxy"]
[ext_resource type="Texture2D" uid="uid://dofag8acl2hrt" path="res://content/images/icon_branch.png" id="4_ahhl5"]

[node name="Node2DBranchTree" type="Node2D"]

[node name="HUD" type="CanvasLayer" parent="."]
script = ExtResource("1_tgpox")

[node name="LabelTitle" type="Label" parent="HUD"]
offset_left = 507.0
offset_top = 77.0
offset_right = 601.0
offset_bottom = 100.0
text = "Branch Tree"

[node name="ButtonBackToStart" type="Button" parent="HUD"]
offset_left = 9.0
offset_top = 12.0
offset_right = 90.0
offset_bottom = 76.0
text = "< Back"

[node name="GridContainerToolBar" type="GridContainer" parent="HUD"]
layout_direction = 2
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -230.0
offset_top = 205.0
offset_right = 243.0
offset_bottom = 308.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 4

[node name="ButtonPeep" type="Button" parent="HUD/GridContainerToolBar"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Peep"

[node name="ButtonBranch" type="Button" parent="HUD/GridContainerToolBar"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Branch"

[node name="Button3" type="Button" parent="HUD/GridContainerToolBar"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "3"

[node name="Button4" type="Button" parent="HUD/GridContainerToolBar"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "4"

[node name="CanvasLayerBranchMap" type="CanvasLayer" parent="."]
script = ExtResource("2_43bds")

[node name="NodePlayerState" type="Node" parent="."]
script = ExtResource("2_jh4iv")
texture_icon_peep = ExtResource("3_0lsxy")
texture_icon_branch = ExtResource("4_ahhl5")

[node name="Marker2DCursor" type="Marker2D" parent="NodePlayerState"]
position = Vector2(417, 260)

[node name="SpriteTool" type="Sprite2D" parent="NodePlayerState/Marker2DCursor"]

[connection signal="pressed" from="HUD/ButtonBackToStart" to="HUD" method="_on_button_back_to_start_pressed"]
[connection signal="pressed" from="HUD/GridContainerToolBar/ButtonPeep" to="NodePlayerState" method="_on_button_peep_pressed"]
[connection signal="pressed" from="HUD/GridContainerToolBar/ButtonBranch" to="NodePlayerState" method="_on_button_branch_pressed"]
[connection signal="player_tool_cancelled" from="CanvasLayerBranchMap" to="NodePlayerState" method="_on_player_tool_cancelled"]
